api endpoint skeleton for adding tune files
