# internal/api/handler.go
@@ -4,13 +4,28 @@ import (
 	"banduslib/internal/api/apimodel"
 	"banduslib/internal/common"
 	"banduslib/internal/interfaces"
+	"fmt"
 	"github.com/gin-gonic/gin"
+	"log"
 	"net/http"
 	"strconv"
 )
 
 type apiHandler struct {
 	service interfaces.DataService
+}
+
+func (a *apiHandler) AddTuneFiles(c *gin.Context) {
+	form, _ := c.MultipartForm()
+	files := form.File["upload[]"]
+
+	for _, file := range files {
+		log.Println(file.Filename)
+
+		// Upload the file to specific dst.
+		//c.SaveUploadedFile(file, dst)
+	}
+	c.String(http.StatusOK, fmt.Sprintf("%d files uploaded!", len(files)))
 }
 
 func httpErrorResponse(c *gin.Context, code int, err error) {
